--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy</title>
-  <link rel="stylesheet" href="privacy-policy.css" />
+  <link rel="stylesheet" href="policy.css" />
 </head>
 <body>
   <main class="container">
@@ -79,7 +79,7 @@
       <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
       <address>
         [Your Company Name]<br />
-        Email: <a href="mailto:privacy@[yourdomain].com">privacy@[yourdomain].com</a><br />
+        Email: <a href="mailto:privacy@[yourdomain].com">veritasnexusglobal@gmail.com</a><br />
         Address: [Your Company Address]
       </address>
     </section>
